# Kletterbewerb

./: .gitignore  README.md  TODO.md  auswertung.py  classes.py  computing_ranks.py  load_data.py  make_pdfs.sh  make_urkunden.py  pyproject.toml  set_data.py  testing.py  ui_test.py
data/template/: bewerb.csv  routen.csv  teilnehmer.csv
data_template/: gruppen.csv  teilnehmer.csv
gui/: group_box_group.py  group_box_group.ui  main_window.py  main_window.ui  ui_group_box_group.py  ui_main_window.py
latex/etiketten/: etiketten.tex
latex/include/: libs.tex
latex/laufzettel/: laufzettel.tex
latex/routenzettel/: routenzettel.tex
latex/urkunden/: urkunden.tex
